Was created ControllerAdvice to catch errors and some exception classes