@@ -3,6 +3,8 @@ package com.ownsecurity.service.impl;
 import com.ownsecurity.dto.TodoDto;
 import com.ownsecurity.entity.TodoEntity;
 import com.ownsecurity.entity.UserEntity;
+import com.ownsecurity.exception.TodoNotFoundException;
+import com.ownsecurity.exception.UserNotFoundException;
 import com.ownsecurity.repository.TodoRepository;
 import com.ownsecurity.repository.UserRepository;
 import com.ownsecurity.security.service.UserDetailsImpl;
@@ -10,6 +12,7 @@ import com.ownsecurity.service.TodoService;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
+import org.springframework.web.client.ResourceAccessException;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -28,32 +31,41 @@ public class TodoServiceImpl implements TodoService {
     }
 
     @Override
-    public List<TodoDto> todos() throws Exception {
-        try {
-            UserDetailsImpl userDetails = (UserDetailsImpl) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
-            if (userDetails.getAuthorities().stream().map(GrantedAuthority::getAuthority).toList().contains("ROLE_ADMIN")) {
-                return todoRepository.findAll().stream().map(TodoDto::toTodoDto).collect(Collectors.toList());
-            } else {
-                return null;
-            }
-        } catch (Exception e) {
-            throw new Exception("Ошибка получения задач!");
+    public List<TodoDto> todos() throws ResourceAccessException {
+        UserDetailsImpl userDetails = (UserDetailsImpl) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
+
+        if (userDetails.getAuthorities().stream().map(GrantedAuthority::getAuthority).toList().contains("ROLE_ADMIN")) {
+            return todoRepository.findAll().stream().map(TodoDto::toTodoDto).collect(Collectors.toList());
+        } else {
+            throw new ResourceAccessException("У вас нет права доступа к данному ресурсу!");
         }
+
     }
 
     @Override
-    public List<TodoEntity> todosByUserId(Long userId) throws Exception {
-        try {
-            return userRepository.findById(userId).get().getTodos();
-        } catch (Exception e) {
-            throw new Exception(e.getMessage());
+    public List<TodoDto> todosByUserId(Long userId) throws TodoNotFoundException, UserNotFoundException {
+        Optional<UserEntity> user = userRepository.findById(userId);
+        if(user.isPresent()) {
+            List<TodoDto> todoDos = user.get().getTodos().stream().map(TodoDto::toTodoDto).toList();
+            if (todoDos == null) {
+                throw new TodoNotFoundException("Задачи не найдены!");
+            } else {
+                return todoDos;
+            }
+        } else {
+            throw new UserNotFoundException("Пользователь с id = " + userId + " не найден!");
         }
+
     }
 
     @Override
     public TodoDto createTodo(TodoEntity todo) throws Exception {
         UserDetailsImpl userDetails = (UserDetailsImpl) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
-        UserEntity user = userRepository.findById(userDetails.getId()).orElseThrow();
+
+        UserEntity user = userRepository.findById(userDetails.getId()).get();
+        if(user == null) {
+            throw new UserNotFoundException("Пользователь с id = " + userDetails.getId() + " не найден!");
+        }
 
         try {
             List<TodoEntity> userTodos = user.getTodos();
@@ -79,7 +91,7 @@ public class TodoServiceImpl implements TodoService {
             todo.setCompleted(!todo.getCompleted());
             return TodoDto.toTodoDto(todoRepository.save(todo));
         } else {
-            throw new Exception("Задача не найдена!");
+            throw new TodoNotFoundException("Задача не найдена!");
         }
     }
 
@@ -101,7 +113,7 @@ public class TodoServiceImpl implements TodoService {
 
             return TodoDto.toTodoDto(removedTodo);
         } else {
-            throw new Exception("Задача не найдена");
+            throw new TodoNotFoundException("Задача не найдена");
         }
     }
 }
